# pkg/restapi/operations/payments/update_payment_responses.go
@@ -1,0 +1,102 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package payments
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	models "github.com/volmedo/pAPI/pkg/models"
+)
+
+// UpdatePaymentOKCode is the HTTP code returned for type UpdatePaymentOK
+const UpdatePaymentOKCode int = 200
+
+/*UpdatePaymentOK Payment details
+
+swagger:response updatePaymentOK
+*/
+type UpdatePaymentOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.PaymentUpdateResponse `json:"body,omitempty"`
+}
+
+// NewUpdatePaymentOK creates UpdatePaymentOK with default headers values
+func NewUpdatePaymentOK() *UpdatePaymentOK {
+
+	return &UpdatePaymentOK{}
+}
+
+// WithPayload adds the payload to the update payment o k response
+func (o *UpdatePaymentOK) WithPayload(payload *models.PaymentUpdateResponse) *UpdatePaymentOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the update payment o k response
+func (o *UpdatePaymentOK) SetPayload(payload *models.PaymentUpdateResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *UpdatePaymentOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// UpdatePaymentNotFoundCode is the HTTP code returned for type UpdatePaymentNotFound
+const UpdatePaymentNotFoundCode int = 404
+
+/*UpdatePaymentNotFound Payment Not Found
+
+swagger:response updatePaymentNotFound
+*/
+type UpdatePaymentNotFound struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.APIError `json:"body,omitempty"`
+}
+
+// NewUpdatePaymentNotFound creates UpdatePaymentNotFound with default headers values
+func NewUpdatePaymentNotFound() *UpdatePaymentNotFound {
+
+	return &UpdatePaymentNotFound{}
+}
+
+// WithPayload adds the payload to the update payment not found response
+func (o *UpdatePaymentNotFound) WithPayload(payload *models.APIError) *UpdatePaymentNotFound {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the update payment not found response
+func (o *UpdatePaymentNotFound) SetPayload(payload *models.APIError) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *UpdatePaymentNotFound) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(404)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
